# hackingupdate

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run_brief.sh
.github/workflows/: ci.yml
feeds/: feeds.txt
hackingupdate/: __init__.py  cli.py  config.py  pipeline.py
scripts/: build_working_set.py  db_manager.py  dedupe_fingerprints.py  email_notifier.py  extractor.py  fetcher.py  fingerprint_analyzer.py  html_generator.py  priority_ranker.py  prune_logs.py  report_generator.py  rss_generator.py  teams_notifier.py  whatsapp_notifier.py
tests/: test_cli.py  test_config.py  test_db_manager.py  test_dedupe.py  test_extractor.py  test_fetcher.py  test_pipeline.py  test_priority_ranker.py  test_report_generator.py
