[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackingupdate"
version = "1.0.0"
description = "AI-powered daily security intelligence briefing pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anil Kumar Jamadar"}
]
keywords = ["security", "vulnerability", "threat-intelligence", "pentest", "cve"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "python-dotenv>=1.0.1",
    "openai>=1.14.1",
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.3",
    "markdown>=3.5.2",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "legacy-cgi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[project.scripts]
hackingupdate = "hackingupdate.cli:cli"

[project.urls]
Homepage = "https://github.com/4nilsj/hackingupdate"
Repository = "https://github.com/4nilsj/hackingupdate"

[tool.setuptools.packages.find]
include = ["hackingupdate*"]

[tool.ruff]
target-version = "py310"
line-length = 120
